fixed about_me alignment

--- a/about_me.css
+++ b/about_me.css
@@ -29,8 +29,6 @@ body {
   color: black;
 }
 
-
-
 /* Body styling */
 
 body {
@@ -49,7 +47,7 @@ body {
   height: 300px;
   position: absolute;
   top: 50px;
-  left: 50px;
+  left: 60px;
   border-radius: 25px;
 }
 
@@ -57,7 +55,7 @@ body {
   width: 350px;
   height: 450px;
   position: relative; 
-  left: 20%;
+  left: 15%;
   border-radius: 30px;
 }
 
@@ -65,7 +63,7 @@ body {
   width: 315px;
   height: 300px;
   position: absolute;
-  left: 20px;
+  left: 19px;
   top: 23%;
   background-color: transparent;
   border: none;
